corrected width on mobile

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -17,7 +17,7 @@ button{
 }
 .form-container{
     background: #fff;
-    width:800px;
+    width:min(100%,800px);
     height: 80px;
     align-items: center;
     box-shadow: 0px 2px 10px -5px;
@@ -82,7 +82,7 @@ input[type=text]:focus{
     border: 2px solid rgba(233,136,3,1);
 }
 #list-container{
-    width:800px;
+    width:min(100%,800px);
     background: #fff;
     max-height: 400px;
     overflow-y: scroll;
